# OpenCL

HW1/: CMakeLists.txt  conv.cl
HW1/include/: Convolution.h  Matrix.h  cl.hpp
HW1/src/: Convolution.cpp  main.cpp
HW2/: CMakeLists.txt  sum.cl
HW2/include/: Scan.h
HW2/src/: Scan.cpp  main.cpp
